# nestedtext-haskell

./: .ghci  .gitmodules  .stylish-haskell.yaml  CHANGELOG.md  README.md  flake.nix  nestedtext.cabal  renovate.json5
.github/workflows/: haskell.yaml
src/Data/: NestedText.hs
src/Data/NestedText/: Decode.hs  Encode.hs  From.hs  Parse.hs  Serialize.hs  To.hs  Type.hs  Util.hs
test/: Empty.hs  Official.hs  Property.hs  Util.hs
