cabal-version:      3.8
name:               nestedtext
version:            0.1.3
synopsis:           NestedText: A Human Friendly Data Format
description:
    Haskell implementation of [NestedText](https://nestedtext.org/) 3.7
    parser and serializer.
category:           Data
license:            Apache-2.0
license-file:       LICENSE
homepage:           https://github.com/0y2k/nestedtext-haskell
bug-reports:        https://github.com/0y2k/nestedtext-haskell/issues
author:             0y2k <0x0y2k@gmail.com>
maintainer:         0y2k <0x0y2k@gmail.com>
copyright:          (c) 2025 0y2k
build-type:         Simple
extra-doc-files:
    CHANGELOG.md,
    README.md,
    vendor/github.com/KenKundert/nestedtext_tests/README.md,
extra-source-files:
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/load_in.nt,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/load_out.json,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/load_err.json,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/dump_in.json,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/dump_in.py,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/dump_out.nt,
    vendor/github.com/KenKundert/nestedtext_tests/test_cases/**/dump_err.json,

source-repository head
    type:     git
    location: https://github.com/0y2k/nestedtext-haskell

common depends
    build-depends:
        base >= 4.17 && < 4.22,
        bytestring >= 0.11 && < 0.13,
        containers >= 0.6.5 && < 0.8,
        pipes >= 4.0 && < 4.4,
        pipes-text >= 1.0 && < 1.1,
        text >= 2.0 && < 2.2,
        text-short >= 0.1 && < 0.2,
        vector >= 0.13 && < 0.14,

common warnings
    ghc-options: -Wall

library
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    build-depends:
        binary >= 0.8 && < 0.9,
        free >= 3.2 && < 5.3,
        generic-data >= 1.1 && < 1.2,
        microlens-platform >= 0.4.3.1 && < 0.5,
        pipes-parse >= 3.0 && < 3.1,
        transformers >= 0.6 && < 0.7,
    exposed-modules:
        Data.NestedText,
        Data.NestedText.Decode,
        Data.NestedText.Encode,
        Data.NestedText.From,
        Data.NestedText.Parse,
        Data.NestedText.Serialize,
        Data.NestedText.To,
        Data.NestedText.Type,
        Data.NestedText.Util,

test-suite nested-text-test
    import:           depends, warnings
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-tool-depends:
        tasty-discover:tasty-discover
    build-depends:
        nestedtext,
        directory,
        filepath,
        hedgehog,
        json,
        tasty,
        tasty-hedgehog,
        tasty-hunit,
    other-modules:
        Empty,
        Official,
        Property,
        Util,
